chore(collection): move remaining endpoint to /collection
- update binding classes
- add useCollectionService frontend service
